# mv

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  config.example.json  update-github.bat
WEB_interface/WEB_F/: .gitignore  README.md  install-pi-web-autostart.sh  install-pi-web-systemd.sh  main.py  pi-web-updater.env.example  requirements.txt  run-pi-web-updater.sh
docs/: git_ssh_raspberry_pi_deploy_workflow.md  local_tracker.md  raspberry_pi5_camera_module3.md  raspberry_pi_startup.md
scripts/: deploy-pi.ps1  install-pi-desktop-autostart.sh  run-pi-cv.sh  update-github.ps1  vsdev-cmake.cmd
src/: Jconfig.cpp  Jconfig.hpp  PIDController.cpp  PIDController.hpp  crsf_rc.cpp  crsf_rc.hpp  crsf_tcp_packet_sender.cpp  crsf_tcp_packet_sender.hpp  kalman_filtre.cpp  kalman_filtre.hpp  local_tracker.cpp  local_tracker.h  main.cpp  screen_capture.cpp  screen_capture.h
